# rcli

./: Cargo.toml  cliff.toml  rustfmt.toml
fixtures/: blake3.txt  ed25519.pk  ed25519.sk  tmp.b64
src/: main.rs  opts.rs  process.rs
src/cli/: base64.rs  csv.rs  http.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  text.rs
