[package]
name = "rcli"
version = "0.1.0"
authors = ["YaoPang"]
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
anyhow = "1.0.98"
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
rand = "0.8.5"
zxcvbn = "3.1.0"
base64 = "0.22.1"
blake3 = "1.8.2"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros", "net", "fs"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
axum = { version = "0.8.4", features = ["http2", "query", "tracing"] }
tracing = "0.1.41"
tower-http = { version = "0.6.4", features = ["compression-full", "cors", "trace", "fs"] }
